personal application branding in index

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BrokerLog</title>
-    <meta name="description" content="Modern real estate management platform">
-    <meta name="author" content="Lovable" />
+    <meta name="description" content="Your easy property ledger" />
+    <meta name="author" content="BrokerLog" />
 
     <meta property="og:title" content="BrokerLog" />
-    <meta property="og:description" content="Lovable Generated Project" />
+    <meta property="og:description" content="Your easy property ledger" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/placeholder.svg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:site" content="@brokerlog" />
+    <meta name="twitter:image" content="/placeholder.svg" />
   </head>
 
   <body>
