--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BrokerLog</title>
+    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
+    <link rel="icon" type="image/x-icon" href="/placeholder.svg" />
     <meta name="description" content="Your easy property ledger" />
     <meta name="author" content="BrokerLog" />
 
