--- a/index.html
+++ b/index.html
@@ -4,19 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>BrokerLog</title>
-    <link rel="icon" type="image/svg+xml" href="/placeholder.svg" />
-    <link rel="icon" type="image/x-icon" href="/placeholder.svg" />
-    <meta name="description" content="Your easy property ledger" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <meta name="description" content="Structured property inventory for serious real estate businessmen" />
     <meta name="author" content="BrokerLog" />
 
     <meta property="og:title" content="BrokerLog" />
-    <meta property="og:description" content="Your easy property ledger" />
+    <meta property="og:description" content="Structured property inventory for serious real estate businessmen" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/placeholder.svg" />
+    <meta property="og:image" content="/favicon.svg" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@brokerlog" />
-    <meta name="twitter:image" content="/placeholder.svg" />
+    <meta name="twitter:image" content="/favicon.svg" />
   </head>
 
   <body>
